--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/crop": "^4.18.0",
     "@ionic-native/geolocation": "^4.19.0",
     "@ionic-native/image-picker": "^4.18.0",
+    "@ionic-native/social-sharing": "^4.19.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
@@ -40,6 +41,8 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-telerik-imagepicker": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^5.4.4",
+    "es6-promise-plugin": "^4.2.2",
     "firebase": "^5.7.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -71,7 +74,10 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-x-socialsharing": {
+        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
+      }
     },
     "platforms": [
       "android"
