--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ionic/storage": "2.2.0",
     "angularfire2": "^5.1.1",
     "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-device": "^2.0.2",
@@ -43,6 +44,8 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-telerik-imagepicker": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^5.4.4",
+    "es6-promise-plugin": "^4.2.2",
     "firebase": "^5.7.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -75,13 +78,12 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-x-socialsharing": {
-        "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
-      },
+      "cordova-plugin-x-socialsharing": {},
       "cordova-plugin-firebase": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
