--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/firebase": "^4.19.0",
     "@ionic-native/geolocation": "^4.19.0",
     "@ionic-native/image-picker": "^4.18.0",
+    "@ionic-native/in-app-browser": "^5.0.0",
     "@ionic-native/social-sharing": "^4.19.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
@@ -38,6 +39,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -81,7 +83,8 @@
       "cordova-plugin-x-socialsharing": {
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
       },
-      "cordova-plugin-firebase": {}
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
