--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "cordova-plugin-telerik-imagepicker": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.4",
-    "cordova-sqlite-storage": "^2.6.0",
     "es6-promise-plugin": "^4.2.2",
     "firebase": "^5.7.3",
     "ionic-angular": "3.9.2",
@@ -84,8 +83,7 @@
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
       },
       "cordova-plugin-firebase": {},
-      "cordova-plugin-inappbrowser": {},
-      "cordova-sqlite-storage": {}
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "browser",
