--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@ionic-native/geolocation": "^4.19.0",
     "@ionic-native/image-picker": "^4.18.0",
     "@ionic-native/in-app-browser": "^5.0.0",
+    "@ionic-native/local-notifications": "^4.20.0",
     "@ionic-native/social-sharing": "^4.19.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "angularfire2": "^5.1.1",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.4",
+    "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-crop": "^0.4.0",
     "cordova-plugin-device": "^2.0.2",
@@ -41,6 +43,7 @@
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-telerik-imagepicker": "^2.2.2",
@@ -83,7 +86,8 @@
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
       },
       "cordova-plugin-firebase": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "browser",
