--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/social-sharing": "^4.19.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
+    "@ionic/storage": "^2.2.0",
     "angularfire2": "^5.1.1",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.4",
@@ -46,6 +47,7 @@
     "cordova-plugin-telerik-imagepicker": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.4",
+    "cordova-sqlite-storage": "3.0.0",
     "es6-promise-plugin": "^4.2.2",
     "firebase": "^5.7.3",
     "ionic-angular": "3.9.2",
@@ -83,7 +85,8 @@
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+"
       },
       "cordova-plugin-firebase": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "browser",
