--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "cordova-plugin-telerik-imagepicker": "^2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.4",
-    "cordova-sqlite-storage": "3.0.0",
+    "cordova-sqlite-storage": "^3.0.0",
     "es6-promise-plugin": "^4.2.2",
     "firebase": "^5.7.3",
     "ionic-angular": "3.9.2",
@@ -89,11 +89,8 @@
       },
       "cordova-plugin-firebase": {},
       "cordova-plugin-inappbrowser": {},
-<<<<<<< HEAD
-      "cordova-plugin-local-notification": {}
-=======
+      "cordova-plugin-local-notification": {},
       "cordova-sqlite-storage": {}
->>>>>>> 1b9990ef957a7b502eff86a5189d7f29ec07549b
     },
     "platforms": [
       "browser",
